# cirq-on-iqm

./: .buildinfo  .coveragerc  .gitignore  .mypy.ini  .pylintrc  API.html  AUTHORS.rst  CHANGELOG.rst  CODEOWNERS  DEVELOPMENT.rst  LICENSE  README.rst  authors.html  changelog.html  genindex.html  index.html  license.html  licenses.txt  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  tag-from-pipeline.sh  tox.ini  user_guide.html
.doctrees/: API.doctree  authors.doctree  changelog.doctree  index.doctree  license.doctree  user_guide.doctree
.doctrees/api/: cirq_iqm.adonis.Adonis.doctree  cirq_iqm.adonis.doctree  cirq_iqm.devices.adonis.Adonis.doctree  cirq_iqm.devices.adonis.doctree  cirq_iqm.devices.apollo.Apollo.doctree  cirq_iqm.devices.apollo.doctree  cirq_iqm.devices.doctree  cirq_iqm.devices.iqm_device.IQMDevice.doctree  cirq_iqm.devices.iqm_device.doctree  cirq_iqm.devices.iqm_device_metadata.IQMDeviceMetadata.doctree  cirq_iqm.devices.iqm_device_metadata.doctree  cirq_iqm.devices.valkmusa.Valkmusa.doctree  cirq_iqm.devices.valkmusa.doctree  cirq_iqm.doctree  cirq_iqm.extended_qasm_parser.circuit_from_qasm.doctree  cirq_iqm.extended_qasm_parser.doctree  cirq_iqm.iqm_client.APITimeoutError.doctree  cirq_iqm.iqm_client.CircuitDTO.doctree  cirq_iqm.iqm_client.CircuitExecutionError.doctree  cirq_iqm.iqm_client.IQMClient.doctree  cirq_iqm.iqm_client.InstructionDTO.doctree  cirq_iqm.iqm_client.RunRequestDTO.doctree  cirq_iqm.iqm_client.RunResult.doctree  cirq_iqm.iqm_client.RunStatus.doctree  cirq_iqm.iqm_client.SingleQubitMappingDTO.doctree  cirq_iqm.iqm_client.doctree  cirq_iqm.iqm_device.DecomposeGatesFinal.doctree  cirq_iqm.iqm_device.DropRZBeforeMeasurement.doctree  cirq_iqm.iqm_device.IQMDevice.doctree  cirq_iqm.iqm_device.MergeOneParameterGroupGates.doctree  cirq_iqm.iqm_device.doctree  cirq_iqm.iqm_gates.IsingGate.doctree  cirq_iqm.iqm_gates.XYGate.doctree  cirq_iqm.iqm_gates.doctree  cirq_iqm.iqm_operation_mapping.OperationNotSupportedError.doctree  cirq_iqm.iqm_operation_mapping.doctree  cirq_iqm.iqm_operation_mapping.map_operation.doctree  cirq_iqm.iqm_remote.IQMSampler.doctree  cirq_iqm.iqm_remote.doctree  cirq_iqm.iqm_remote.serialize_circuit.doctree  (+45 more)
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml  tag_and_release.yml  tag_and_release_test.yml
_images/: inheritance-15d6c2fb3291ae896a03e2c0fe9a3bbb7518a3a5.png.map  inheritance-1661e3e6161d5c9155c5b97d494ed9e79afe71a9.png.map  inheritance-19556d5ef9c3097874332be57d329ba667013380.png.map  inheritance-1dc65539238a6341de95f9bb98493babc91e62c1.png.map  inheritance-3ae5c7c04ef8e9bf722bb795c4bd052ca6f8eb2c.png.map  inheritance-613df6434e74d17446b960cb8855700a12912505.png.map  inheritance-b33c7aa2f06f6c6b523fc62899f33317912088e4.png.map  inheritance-cc90f8b2f2610c255ab5fc9defbd3fd26f97d27d.png.map  inheritance-ce1123406578075b3ecb939bf6a088e6884fbb4e.png.map  inheritance-ed48b150b17bf5d0d429a5f95cfd17ebc18ff845.png.map
_sources/: user_guide.rst
_sources/api/: cirq_iqm.adonis.Adonis.rst.txt  cirq_iqm.adonis.rst.txt  cirq_iqm.devices.iqm_device.IQMDevice.rst.txt  cirq_iqm.devices.rst.txt  cirq_iqm.iqm_client.APITimeoutError.rst.txt  cirq_iqm.iqm_client.CircuitDTO.rst.txt  cirq_iqm.iqm_client.CircuitExecutionError.rst.txt  cirq_iqm.iqm_client.IQMClient.rst.txt  cirq_iqm.iqm_client.InstructionDTO.rst.txt  cirq_iqm.iqm_client.RunRequestDTO.rst.txt  cirq_iqm.iqm_client.RunResult.rst.txt  cirq_iqm.iqm_client.RunStatus.rst.txt  cirq_iqm.iqm_client.SingleQubitMappingDTO.rst.txt  cirq_iqm.iqm_client.rst.txt  cirq_iqm.iqm_device.DecomposeGatesFinal.rst.txt  cirq_iqm.iqm_device.DropRZBeforeMeasurement.rst.txt  cirq_iqm.iqm_device.IQMDevice.rst.txt  cirq_iqm.iqm_device.MergeOneParameterGroupGates.rst.txt  (+41 more)
_static/: documentation_options.js  index.html
api/: cirq_iqm.adonis.Adonis.html  cirq_iqm.adonis.html  cirq_iqm.devices.adonis.Adonis.html  cirq_iqm.devices.adonis.html  cirq_iqm.devices.apollo.Apollo.html  cirq_iqm.devices.apollo.html  cirq_iqm.devices.html  cirq_iqm.devices.iqm_device.IQMDevice.html  cirq_iqm.devices.iqm_device.html  cirq_iqm.devices.iqm_device_metadata.IQMDeviceMetadata.html  cirq_iqm.devices.iqm_device_metadata.html  cirq_iqm.devices.valkmusa.Valkmusa.html  cirq_iqm.devices.valkmusa.html  cirq_iqm.extended_qasm_parser.circuit_from_qasm.html  cirq_iqm.extended_qasm_parser.html  cirq_iqm.html  cirq_iqm.iqm_client.APITimeoutError.html  cirq_iqm.iqm_client.CircuitDTO.html  cirq_iqm.iqm_client.CircuitExecutionError.html  cirq_iqm.iqm_client.IQMClient.html  cirq_iqm.iqm_client.InstructionDTO.html  cirq_iqm.iqm_client.RunRequestDTO.html  cirq_iqm.iqm_client.RunResult.html  cirq_iqm.iqm_client.RunStatus.html  cirq_iqm.iqm_client.SingleQubitMappingDTO.html  cirq_iqm.iqm_client.html  cirq_iqm.iqm_device.DecomposeGatesFinal.html  cirq_iqm.iqm_device.DropRZBeforeMeasurement.html  cirq_iqm.iqm_device.IQMDevice.html  cirq_iqm.iqm_device.MergeOneParameterGroupGates.html  cirq_iqm.iqm_device.html  cirq_iqm.iqm_gates.IsingGate.html  cirq_iqm.iqm_gates.XYGate.html  cirq_iqm.iqm_gates.html  cirq_iqm.iqm_operation_mapping.OperationNotSupportedError.html  cirq_iqm.iqm_operation_mapping.html  cirq_iqm.iqm_operation_mapping.map_operation.html  cirq_iqm.iqm_remote.IQMSampler.html  cirq_iqm.iqm_remote.html  cirq_iqm.iqm_remote.serialize_circuit.html  (+52 more)
docs/: API.rst  Makefile  conf.py  getting_started.rst  index.rst  intro.rst  usage.ipynb  user_guide.rst
examples/: demo_adonis.py  demo_apollo.py  demo_common.py  demo_iqm_engine.py  demo_iqm_execution.py  demo_valkmusa.py  usage.ipynb
tests/: .pylintrc  adonis_test.py  coco_mock.py  conftest.py  iqm_client_test.py  iqm_gates_test.py  iqm_operation_mapping_test.py  iqm_remote_test.py  optimization_test.py  settings.json  test_adonis.py  test_aphrodite.py  test_apollo.py  test_iqm_device.py  test_iqm_device_metadata.py  test_iqm_gates.py  test_iqm_operation_mapping.py  test_iqm_remote.py  test_iqm_sampler.py  test_openqasm.py  test_optimization.py  test_qubit_mapping.py  test_valkmusa.py  valkmusa_test.py
(+1578 files in other folders)
