[build-system]
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# See configuration details in https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py311']
extend-exclude = '_pb2.py$'


[tool.isort]
# make isort and black compatible
profile = 'black'
line_length = 120
balanced_wrapping = true
force_sort_within_sections = true
reverse_relative = true
group_by_package = true