# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = cirq-iqm
description = Google Cirq adapter for IQM's quantum architectures
author = Cirq on IQM developers
author_email = developers@meetiqm.com
license = Apache 2.0
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/iqm-finland/cirq-on-iqm
project_urls =
    Documentation = https://iqm-finland.github.io/cirq-on-iqm
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Physics
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src

# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires =
    numpy
    cirq ~= 0.11
    ply  # required by cirq.contrib.qasm_import
    pydantic >= 1.8.1, < 2.0
    iqm-client == 1.0, < 2.0

# Require a specific Python version, e.g. Python 2.7 or >= 3.4
python_requires = ~= 3.9

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install cirq_iqm[dev,docs,testing]`
dev =
    tox == 3.23.0
docs =
    sphinx == 4.0.2
testing =
    isort == 5.7.0
    mypy == 0.812
    pytest == 6.2.2
    pytest-cov == 2.11.1
    pytest-isort == 1.3.0
    pytest-mypy == 0.8.0
    pytest-pylint == 0.18.0
    jsons == 1.4.2
    mockito == 1.2.2
    pytest-mockito == 0.0.4
cicd =
    twine >= 3.3.0,<4.0
    wheel >= 0.36.2,<1.0

[options.entry_points]
# Add here console scripts like:
# console_scripts =
#     script_name = cirq_iqm.module:function
# And any other entry points, for example:
# pyscaffold.cli =
#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
