# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = cirq-iqm
description = Google Cirq adapter for IQM's quantum architectures
author = Cirq on IQM developers
author_email = developers@meetiqm.com
license = Apache 2.0
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/iqm-finland/cirq-on-iqm
project_urls =
    Documentation = https://iqm-finland.github.io/cirq-on-iqm
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Physics
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src

# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires =
    numpy
    cirq ~= 1.1
    ply  # required by cirq.contrib.qasm_import
    iqm-client >= 11.0, < 12.0

# Require a specific Python version, e.g. Python 2.7 or >= 3.4
python_requires = ~= 3.9

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here additional requirements for extra features, to install with:
# `pip install cirq_iqm[dev,docs,testing]`
dev =
    tox == 3.26.0
docs =
    sphinx == 4.5
    sphinx-book-theme == 0.3.3
testing =
    black == 22.10.0
    isort == 5.10.1
    mypy == 0.982
    pytest == 7.1.2
    pytest-cov == 3.0.0
    pytest-isort == 3.0.0
    pytest-mypy == 0.9.1
    pytest-pylint == 0.18.0
    jsons == 1.4.2
    mockito == 1.2.2
    pytest-mockito == 0.0.4
cicd =
    twine ~= 4.0
